--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=7079
 
 #database configuration:mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/EMS_project
+spring.datasource.url=jdbc:mysql://localhost:3306/ems_db
 spring.datasource.username=root
 spring.datasource.password=Password@2022
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -10,5 +10,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 
 
